--- a/Projects/p1/src/main/webapp/login.html
+++ b/Projects/p1/src/main/webapp/login.html
@@ -5,6 +5,7 @@
         <script src="//maxcdn.bootstrapcdn.com/bootstrap/4.1.1/js/bootstrap.min.js"></script>
         <script src="//cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
 <head>
+<meta charset="UTF-8" />
 	<title>Login Page</title>
    <!--Made with love by Mutiullah Samim -->
    
@@ -23,13 +24,6 @@
 		<div class="card">
 			<div class="card-header">
 				<h3>Sign In</h3>
-				<form>
-				<div class="d-flex justify-content-end social_icon">
-					<span><i><input type="submit" value="facebook" class="fab fa-facebook-square"></i></span>
-					<span><i class="fab fa-google-plus-square"></i></span>
-					<span><i class="fab fa-twitter-square"></i></span>
-				</div>
-				</form>
 			</div>
 			<div class="card-body">
 				<form action="login" method="POST">
@@ -37,14 +31,14 @@
 						<div class="input-group-prepend">
 							<span class="input-group-text"><i class="fas fa-user"></i></span>
 						</div>
-						<input type="text" class="form-control" placeholder="username">
+						<input type="text" name="username" class="form-control" placeholder="username">
 						
 					</div>
 					<div class="input-group form-group">
 						<div class="input-group-prepend">
 							<span class="input-group-text"><i class="fas fa-key"></i></span>
 						</div>
-						<input type="password" class="form-control" placeholder="password">
+						<input type="password" name="password" class="form-control" placeholder="password">
 					</div>
 					<div class="row align-items-center remember">
 						<input type="checkbox">Remember Me
