--- a/Projects/p1/src/main/webapp/Manager.html
+++ b/Projects/p1/src/main/webapp/Manager.html
@@ -1,19 +1,20 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
+      <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
     <script src ="Employee.js"></script>
-    <title>Employee Home</title>
-<script></script>
-<body>
-	<div class="topnavigation">
-   	 	<a href="ReimForm.html">Submit Reimbursement</a>
-    	<a href="EmployeeReim.html">View Reimbursement</a>
-    	<a href="login.html">Log Out</a>
-    	<br>
+    <title>Employee Information</title>
+</head>
+   <body>
+   <!-- Menu -->
+  <div class="topnavigation">
+    <a href="ReimForm.html">Submit Reimbursemnent</a>
+    <a href="EmployeeReim.html">View Reimbursemnent</a>
+    <a href="login.html">Log Out</a>
+		<br>
     	<br>
 	</div>
 	<div id="welcomeEmp">
@@ -22,7 +23,7 @@
     <br>
     <br>
      <table class="index_smaller_text">
-          <tr>
+     	<tr>
             <td><h3 id="firstname">First name: </h3> </td>
           <tr>
             <td><h3 id="lastname">Last name: </h3></td>
